# pws

./: .gitignore  CMakeLists.txt
cmake/: pws.pc.in  pwsConfig.cmake.in
include/pws/: pws.h  pws.hpp
src/: alloc.c  buffer.c  frame.c  internal.h  pws.c
